--- a/gb/24/6/1/n14261951.md
+++ b/gb/24/6/1/n14261951.md
@@ -17,7 +17,7 @@
 <p>李少敏表示，在拨款委员会上，该提案的第一次公听会迟迟未能进行，他推测，这是因为委员会内部未能达成一致意见。因此，他在今年5月1日和15日，分别召集大家发起电话攻势。结果，16日就收到了消息，表示该提案已被拨款委员会所否决。</p>
 <p>李少敏还补充说，如果实施SB 1012提案，其花费至少在200至300亿美元之间。由于加州目前正面临财政赤字，该提案因此无法在拨款委员会通过。</p>
 <p>他还心有余悸地对大家说，今年如果让SB 1012在参议院通过，它最终成为法律的机会是非常高的。他表示：“现在我才说，其实，我们今年非常担心这个恶法会通过的，但没想到它竟然连参议院都过不去。所以我们再次感谢大家和我们一起同心协力。广大民众的发声和努力，确实起到了效果。”</p>
-<figure id="attachment_14262135" aria-describedby="caption-attachment-14262135" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14262135-FD2.png"><img class="size-large wp-image-14262135" src="https://i.epochtimes.com/assets/uploads/2024/06/id14262135-FD2-600x332.png" alt="" width="600" b="332" /></a><figcaption id="caption-attachment-14262135" class="wp-caption-text">2024年5月30日，李伊云医生在网络讲座上发言。（薛明珠/视频截图）</figcaption></figure>
+<figure id="attachment_14262135" aria-describedby="caption-attachment-14262135" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14262135-FD2.png"><img decoding="async" class="size-large wp-image-14262135" src="https://i.epochtimes.com/assets/uploads/2024/06/id14262135-FD2-600x332.png" alt="" width="600" b="332" /></a><figcaption id="caption-attachment-14262135" class="wp-caption-text">2024年5月30日，李伊云医生在网络讲座上发言。（薛明珠/视频截图）</figcaption></figure>
 <h2>迷幻药的毒害</h2>
 <p>心脏科医生、病人权益协会会长李伊云医生（Dr. Evelyn）表示，根据统计，现在约有一半的人曾经使用过大麻，而每100人中有10人曾经使用过迷幻药。迷幻蘑菇的使用率，自2002年以来增长了四倍，而且它在网上轻易可得。</p>
 <p>她说，年轻人往往不了解这些毒品的危险性。迷幻药的主要成分是Psilocybin，它是一种高度受控的物质，目前在美国是完全非法的。这种迷幻药非常强效，能让人感觉自己好像脱离了现实，并且在短短几分钟内，就能产生强烈的效果。有研究认为，它可以改变人的思维和行为，甚至可能让人无法认出自己的亲人。</p>
@@ -34,29 +34,29 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/16/n14137671.md#1">侨领李少敏誓言：明年替换加州47号法案</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/3/n14239818.md#1">苏轼相交一世的表亲知己：墨竹画家文同</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/22/n14255214.md#1">一个空间通连两个时空 奇特梦境竟然真实不虚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/23/n14256005.md#1">迟到了半个世纪的“毕业纪念册”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/26/n14258095.md#1">【庆祝5·13】普天敬颂谢师恩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260588.md#1">【环球直击】香港民主派初选案宣判 国际谴责</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261868.md#1">【菁英论坛】中国经济面临三连爆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261850.md#1">【车评】新一代王牌 2024 Subaru WRX TR</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260566.md#1">世界最高的烂尾楼？天津117大厦引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260400.md#1">辞高薪工作 美国妈妈改做副业 年赚37.9万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260490.md#1">三中全会前中共五常委接见警察 被指气氛紧张</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260343.md#1">《庆余年2》爆红 张若昀唐艺昕爱情秘辛曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14261029.md#1">蔡少芬趁低价购香港豪宅 原业主7年亏近千万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261784.md#1">范冰冰晒半山豪宅 柜中饮品显示她已移居香港</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260405.md#1">主打吴孟达遗作画面却不到1分钟 片方遭痛批</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14261083.md#1">演员杜旭东被爆为电诈拍广告 涉案金额上亿元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260340.md#1">营养师：这些是商店货架上最健康的奶制品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/25/n14257434.md#1">82岁工作仍精力充沛 日营养师47年吃1种长寿食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260691.md#1">这9个无心的习惯会偷偷消耗你的能量</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/15/n14251167.md#1">这种食物是肾之果 还强脾胃 每天来几颗浑身有力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259537.md#1">【健康1+1】天然染发剂一定安全？3情况不宜染发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309168.md#1">【时事军事】乌成功闪击主因 或改变现代作战方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/1/n14261951.htm">反毒专家详解 提案SB 1012为何会早夭？</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261951.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
